Update ConcreteSyntax.java